* 2012-10-09 - thorben.betten@open-xchange.com

 - Fix for bug 23219: Handle subsequent CRLFs in binary value

* 2012-10-08 - thorben.betten@open-xchange.com

 - Fix for bug 23199: Fixed composing reply text
 - Fix for bug 23202: Fixed possible NPE
 - Fix for bug 23203: Fixed possible NPE
 - Fix for bug 23204: Fixed possible NPE
 - Fix for bug 23205: Fixed possible NPE

* 2012-10-08 - marcus.klein@open-xchange.com

 - Fix for bug 23197: Removed snappy-java from OSGi 3rd party bundles.

* 2012-10-05 - thorben.betten@open-xchange.com

 - Fix for bug 23189: Further simplified and improved regex to look-up CSS blocks

* 2012-10-05 - tobias.friedrich@open-xchange.com

 - Fix for bug 23184: Corrected attachment condition
 - Fix for bug 23174: Send SC_CONFLICT when trying to create an appointment with already existing UID 
 
* 2012-10-04 - thorben.betten@open-xchange.com

 - Fix for bug 23170: Restored class' path
 - Fix for bug 23172: Proper file name on attachment download

* 2012-10-04 - tobias.friedrich@open-xchange.com

 - Fix for bug 23173: Skip group permissions during owner evaluation 
 - Fix for bug 23171: Query for user- instead of contact-ID to get context administrator 

* 2012-10-04 - francisco.laguna@open-xchange.com

 - Fix for bug 23129: Adjustments to the login step configuration to match google website.

* 2012-10-03 - thorben.betten@open-xchange.com

 - Fix for bug 23169: Sane file name for created ZIP file

* 2012-10-02 - francisco.laguna@open-xchange.com

 - Fix for bug 23130 & bug 23131: Lack of defaults led to RTE. 
 - Fix for bug 23065: Ported MSN subscriber to new version 5 API.

* 2012-10-02 - thorben.betten@open-xchange.com

 - Fix for bug 23155: Added option to disable manual umlauts-filtering
 - Fix for bug 22910: fixed checkconfigconsistency
 - Fix for bug 23162: Respond with 404 (Not found) if an empty image stream is detected

* 2012-10-01 - francisco.laguna@open-xchange.com

 - Fix for bug 23134: Ported CVS fixes